<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/devicesFragment"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_devices" />
        <item
            android:id="@+id/historyFragment"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/remediesFragment"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_remedies" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>
</menu>
