<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.avikshit.PestAI.ui.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_homeFragment_to_scanFragment"
            app:destination="@id/scanFragment" />
    </fragment>

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.avikshit.PestAI.ui.ScanFragment"
        android:label="@string/nav_scan" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.avikshit.PestAI.ui.HistoryFragment"
        android:label="@string/nav_history" />

    <fragment
        android:id="@+id/remediesFragment"
        android:name="com.avikshit.PestAI.ui.RemediesFragment"
        android:label="@string/nav_remedies" />

</navigation>
